resloved the dark mode issue

--- a/com.css
+++ b/com.css
@@ -428,11 +428,20 @@ svg{
 @media (max-width: 600px){
   .title-column{
     width: 100%;
+        top: 22px;
+    right: 13px;
+}
   }
   .college{
-    right: 20%;
-    transform: translateY(-100px);
+    right: 0%;
+    transform: translateY(-6px);
   }
+@media (max-width: 600px){
+  .college {
+      right: 11%;
+      transform: translateY(-89px);
+  }
+}
  h3{
   top: calc(60vh);
  }
@@ -589,7 +598,22 @@ svg{
   position: absolute;
   top: 20px;
   right: 10px;
+  display: flex;
 }
+
+
+@media(max-width: 600px){
+  .sw {
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  display: flex;
+  transform: translate(-64px, 1px);
+}
+
+}
+
+
 .othersw {
   top: -30px;
 }
